--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                             </div>
                             <div class="info-item">
                                 <span><i class="fas fa-envelope"></i> Email:</span>
-                                <p>amuhamedamina323@gmail.com</p>
+                                <p>muhamedamina323@gmail.com</p>
                             </div>
                             <div class="info-item">
                                 <span><i class="fas fa-phone"></i> Phone:</span>
