--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="home-image">
                     <div class="image-container">
-                        <img src="Profile.png" alt="Amina's Profile" id="profile-img">
+                        <img src="profileimage.png" alt="Amina's Profile" id="profile-img">
                         <canvas id="profileCanvas" class="profile-canvas"></canvas>
                     </div>
                 </div>
